[package]
name = "call-me"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies.tokio]
version = "1.34.0"
features = ["macros", "rt-multi-thread"]

[dependencies.serenity]
version = "0.12.2"
default-features = false
features = [
	"builder",
	"cache",
	"chrono",
	"client",
	"framework",
	"gateway",
	"http",
	"model",
	"rustls_backend",
]
